<resources>
    <string name="app_name">Join Me</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="E_Mail">E-Mail</string>
    <string name="login">Log In</string>
    <string name="manager">Manager</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="password_verification">Password verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="ok">OK</string>
    <string name="create_group">Create new group</string>
    <string name="search_group">Search group</string>
    <string name="my_history">My history</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_profile">My profile</string>
    <string name="log_out">Log out</string>
    <string name="purpose">Purpose</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="min_participants">Minimum</string>
    <string name="max_participants">Maximum</string>
    <string name="num_of_participants">Number of participants</string>
    <string name="date">Date</string>
    <string name="create">Create</string>
</resources>